src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A34.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A34 {
  class A {
    String a = "a";
    / String a1;
    
    String b = "b";
    / String b1;
    
    int c = 1;
    / int c1;
  }
}
