src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0011.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0011 {
  class C1 {
    String a = 1;
    int b = "str";
  }  
}